--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -12,16 +12,16 @@
   <form action="" method="POST">
     <!-- TODO: add reset functionality button per setting -->
     <label for="colorSnakeHead">Color of the head of the snake</label>
-    <input type="color" id="colorSnakeHead" name="colorSnakeHead">
+    <input type="color" id="colorSnakeHead" name="color_snake_head" value="<%= settings.color_snake_head ?? '' %>">
     
     <label for="colorSnakeBody">Color of the body of the snake</label>
-    <input type="color" id="colorSnakeBody" name="colorSnakeBody">
+    <input type="color" id="colorSnakeBody" name="color_snake_body" value="<%= settings.color_snake_body ?? '' %>">
 
     <label for="colorFood">Color of the food</label>
-    <input type="color" id="colorFood" name="colorFood">
+    <input type="color" id="colorFood" name="color_food" value="<%= settings.color_food ?? '' %>">
 
     <label for="colorObstacles">Color of the obstacles</label>
-    <input type="color" id="colorObstacles" name="colorObstacles">
+    <input type="color" id="colorObstacles" name="color_obstacles" value="<%= settings.color_obstacles ?? '' %>">
 
     <button type="submit">Save settings</button>
   </form>
