--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -38,6 +38,7 @@
     </div>
 
     <button type="submit">Save settings</button>
+    <a href="/settings-reset">Reset settings</a>
   </form>
 </body>
 </html>
