Updated settings.ejs html

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -41,8 +41,10 @@
         <div class="form-error"><%= errors['color_obstacles'] ?? '' %></div>
       </div>
 
-      <button type="submit">Save settings</button>
-      <a href="/settings-reset">Reset settings</a>
+      <div class="actions">
+        <button type="submit">Save settings</button>
+        <a href="/settings-reset">Reset settings</a>
+      </div>
     </form>
   </section>
 </body>
