Updated settings css
Added css for settings.ejs to main.css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -229,7 +229,8 @@ section#settings-form-container {
 }
 
 #settings-form-container .setting:nth-child(even) {
-  background-color: var(--color-background-secondary);
+  background-color: var(--color-accent);
+  
 }
 
 /* -- SETTINGS end -- */
