Updated settings css
Added css for settings.ejs to main.css and default.css

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -6,6 +6,7 @@
   --color-text-primary: #000000;
   --color-text-secondary: #FFFFFF;
   --color-accent: #2E2E2E;
+  --color-accent-secondary: #3f3f3f;
   --color-anchor-primary: #0E00B2;
   --color-anchor-secondary: #FFFFFF;
   --color-error-light: #FFB5B5;
