--- a/public/css/main.css
+++ b/public/css/main.css
@@ -231,7 +231,7 @@ section#settings-form-container {
 
 #settings-form-container .setting:nth-child(even) {
   background-color: var(--color-accent);
-  color: var(--color-text-secondary);
+  color: var(--color-accent-secondary);
 
 }
 
