--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,4 +235,12 @@ section#settings-form-container {
   background-color: var(--color-accent-secondary);
 }
 
+.form-error,
+.form-general-error {
+  border: 2px solid var(--color-error-dark);
+  padding: .2rem .5rem;
+  color: var(--color-error-dark);
+  background-color: var(--color-error-light);
+}
+
 /* -- SETTINGS end -- */
