--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,8 +235,8 @@ section#settings-form-container {
   background-color: var(--color-accent-secondary);
 }
 
-.form-error,
-.form-general-error {
+.form-error:not(:empty),
+.form-general-error:not(:empty) {
   border: 2px solid var(--color-error-dark);
   padding: .2rem .5rem;
   color: var(--color-error-dark);
