main.css settings page update

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -243,4 +243,8 @@ section#settings-form-container {
   background-color: var(--color-error-light);
 }
 
+#settings-form-container button {
+  font-size: 1rem;
+}
+
 /* -- SETTINGS end -- */
