main.css settings page update

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -247,4 +247,12 @@ section#settings-form-container {
   font-size: 1rem;
 }
 
+#settings-form-container .actions {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: .5rem;
+}
+
 /* -- SETTINGS end -- */
