main.css settings page update
Added .actions container flex wrap and gap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -253,6 +253,8 @@ section#settings-form-container {
   justify-content: flex-end;
   align-items: center;
   margin-top: .5rem;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
 
 /* -- SETTINGS end -- */
