--- a/views/players.ejs
+++ b/views/players.ejs
@@ -40,7 +40,7 @@
             <td>
               <a href="/player?username=<%= result.username %>"><%= result.username %></a>
             </td>
-            <td><%= result.created_at %></td>
+            <td><%= result.date_created %></td>
             <td><%= result.games_played %></td>
           </tr>
 
