--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,8 @@
       <nav>
         <a href="/select-gamemode">Play gamemodes</a>
         <a href="/my-statistics">My statistics</a>
-        <a href="/players">Players</a>
+        <a href="/players">Search players</a>
+        <a href="/friends">Friends</a>
         <a href="/settings">Settings</a>
       </nav>
     </section>
