--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <section id="menu">
       <h2>Menu</h2>
       <nav>
-        <a href="/select-gamemode">Play gamemodes</a>
+        <a href="/gamemodes">Play gamemodes</a>
         <a href="/my-statistics">My statistics</a>
         <a href="/players">Search players</a>
         <a href="/friends">Friends</a>
