--- a/public/css/main.css
+++ b/public/css/main.css
@@ -268,6 +268,50 @@ section#settings-form-container {
 
 /* -- SETTINGS end -- */
 
+/* -- GAMEMODE start -- */
+
+section.gamemode-info {
+  padding-block: 1rem;
+}
+
+.gamemode-info h3 {
+  margin-bottom: .6rem;
+}
+
+.gamemode-info table,
+.gamemode-info .play-button {
+  margin-bottom: 1.5rem;
+}
+
+.play-button {
+  background-color: var(--color-accent);
+  color: var(--color-text-secondary);
+  text-decoration: none;
+  width: max-content;
+  padding: .6rem 1rem;
+  font-size: 1.05rem;
+  display: block;
+  border-radius: var(--border-radius);
+}
+
+.play-button:hover {
+  background-color: var(--color-text-primary);
+}
+
+.gamemode-info tbody > tr:nth-child(1) {
+  background-color: rgb(226, 182, 35);
+}
+
+.gamemode-info tbody > tr:nth-child(2) {
+  background-color: rgb(178, 191, 199);
+}
+
+.gamemode-info tbody > tr:nth-child(3) {
+  background-color: rgb(255, 127, 67);
+}
+
+/* -- GAMEMODE end -- */
+
 /* -- PLAYERS start -- */
 
 section.search {
