Changed routing to / instead of ?.

--- a/views/gamemode.ejs
+++ b/views/gamemode.ejs
@@ -48,7 +48,7 @@
         <li><strong>Personal best: <%= gamemode.highscore ?? 'not played' %></strong></li>
         <li>Speed: <%= gamemode.speed %></li>
         <li>Food: <%= gamemode.food_amount %></li>
-        <li>Obstacles: <%= gamemode.obstacles_amount %></li>
+        <li>Obstacles: <%= gamemode.obstacle_amount %></li>
         <li>Walls: <%= gamemode.walls == 1 ? 'yes' : 'no' %></li>
         <li>Created at: <%= gamemode.created_at %></li>
       </ul>
