--- a/views/players.ejs
+++ b/views/players.ejs
@@ -38,7 +38,7 @@
 
           <tr>
             <td>
-              <a href="/player?username=<%= result.username %>"><%= result.username %></a>
+              <a href="/players/<%= result.username %>/profile"><%= result.username %></a>
             </td>
             <td><%= result.date_created %></td>
             <td><%= result.games_played %></td>
